# tolerable

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  README.md  build.rs  justfile  tolerable.toml
.github/workflows/: tag.yaml  test.yaml
kustomize/: certificate.webhook.yaml  deployment.tolerable.yaml  deployment.ubuntu-test.yaml  issuer.selfsigned.yaml  kustomization.yaml  mutatingwebhook.yaml  ns.tolerable.yaml  service.tolerable.yaml  svcacct.tolerable.yaml  tolerable.toml
src/: consts.rs  main.rs  manifest.rs  metrics.rs  models.rs  mutation.rs
src/tests/: admission-review-not-pod.json  admission-review-pod-half-arm.json  admission-review-pod-match.json  mod.rs  test_bl.rs  test_serde.rs
